--- a/UpdateConfig.properties
+++ b/UpdateConfig.properties
@@ -12,7 +12,7 @@
 
 # UpdateUrlSha256项的参数必为 URL 或不填，与UpdateURL获取的信息作核实。
 
-UpdateUrl=https://xxx.xxx.xxx/file
+UpdateUrl=https://raw.githubusercontent.com/Qianshi-OriSrudio/EzUpdate/main/testdata.json
 LastUpdateUrlSha256=
 AutoCheck=False
 AutoCheckDelay=10ms
