--- a/UpdateConfig.properties
+++ b/UpdateConfig.properties
@@ -13,6 +13,6 @@
 # UpdateUrlSha256项的参数必为 URL 或不填，与UpdateURL获取的信息作核实。
 
 UpdateUrl=https://raw.githubusercontent.com/Qianshi-OriSrudio/EzUpdate/main/testdata.json
-LastUpdateUrlSha256=
+MultiThreadingCount=10
 AutoCheck=False
 AutoCheckDelay=10ms
